--- a/layouts/manual.njk
+++ b/layouts/manual.njk
@@ -12,12 +12,25 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-third">
-    <p>Photo Here</p>
+    
+    {% if photo %}
+
+    {% for item in photo %}
+      <img src="{{ item.link }}" alt="{{ item.alt }}" style="max-width:150; width: 100%; height:100%">
+    {% endfor %}
+    
+    {% else %}
+      <img src="https://www.svgrepo.com/download/509848/circled-user.svg" alt="Default User Icon" style="max-width:150px; width: 100%; height:100%">
+    {% endif %}
+
+
   </div>
     <div class="govuk-grid-column-two-thirds">
   <h1 class="govuk-heading-xl">{{title}}</h1>
   </div>
 </div>
+
+<hr>
 
 <div class="govuk-grid-row">
 
@@ -130,12 +143,12 @@
 {% endif %}
 
 {# If I were an animated gif/meme, I would be... #}
-{% if Gif/Meme %}
+{% if Gif %}
   <div class="govuk-grid-column-one-third">
     <h2 class="govuk-heading-m">If I were an animated gif/meme, I would be...</h2>
     
-    {% for item in Gif/Meme %}
-      <img src="{{ item.link }}" alt="{{ item.alt }}">
+    {% for item in Gif %}
+      <img src="{{ item.link }}" alt="{{ item.alt }}" style="width: 100%">
     {% endfor %}
 
   </div>
