Added bio and last updated to the page

--- a/layouts/manual.njk
+++ b/layouts/manual.njk
@@ -26,7 +26,11 @@
 
   </div>
     <div class="govuk-grid-column-two-thirds">
-  <h1 class="govuk-heading-xl">{{title}}</h1>
+  <h1 class="govuk-heading-xl" style="margin-bottom:0px">{{title}}</h1>
+  <span class="govuk-caption-l">{{description}}</span>
+  <span class="govuk-caption-l">{{bio}}</span>
+
+  <span class="govuk-caption-m">Last Updated: {{ page.date.toDateString()}}</span>
   </div>
 </div>
 
