--- a/layouts/manual.njk
+++ b/layouts/manual.njk
@@ -11,12 +11,12 @@
 
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-one-third">
+  <div class="govuk-grid-column-one-third" style="text-align: center">
     
     {% if photo %}
 
     {% for item in photo %}
-      <img src="{{ item.link }}" alt="{{ item.alt }}" style="max-width:150; width: 100%; height:100%">
+      <img src="{{ item.link }}" alt="{{ item.alt }}" style="max-width:200px; width: 100%; height:100%">
     {% endfor %}
     
     {% else %}
