--- a/layouts/base.njk
+++ b/layouts/base.njk
@@ -51,6 +51,7 @@
   {% if opengraphImage %}<meta name="twitter:card" content="summary_large_image">{% endif %}
   {% if opengraphImage.src %}<meta property="og:image" content="{{ opengraphImage.src | url | absoluteUrl(options.url) }}">{% endif %}
   {% if opengraphImage.alt %}<meta property="og:image:alt" content="{{ opengraphImage.alt }}">{% endif %}
+  <script defer src="https://analytics.hoskin.dev/script.js" data-website-id="5986bc57-0283-49c4-a298-3433eb76aa78"></script>
 {% endblock %}
 
 {% block pageTitle %}
